# bot-template

./: .gitignore  .pylintrc  cli.py  mypy.ini  pyproject.toml  pytest.ini
src/domain/base/dto/: base.py
src/domain/base/interfaces/: uow.py
src/domain/channel/dto/: channel.py
src/domain/channel/exceptions/: channel.py
src/domain/channel/interfaces/: persistence.py  uow.py
src/domain/channel/usecase/: channel.py
src/domain/chat/dto/: chat.py
src/domain/chat/exceptions/: chat.py
src/domain/chat/interfaces/: persistence.py  uow.py
src/domain/chat/usecase/: chat.py
src/domain/enums/: log_level.py
src/domain/user/dto/: user.py
src/infrastructure/database/: exceptions.py
src/infrastructure/i18n/: __init__.py  translator_hub.py
src/infrastructure/logging/: __init__.py  adapter.py  loguru_logger.py
src/infrastructure/scheduler/: apschedule.py
src/infrastructure/settings/: config.py
src/tgbot/: run.py
src/tgbot/common/: factories.py
src/tgbot/routers/: __init__.py  unrecognized.py
tests/: conftest.py
tests/fixtures/: bot_fixtures.py  config_fixtures.py  repo_fixtures.py
tests/integration/: conftest.py
tests/integration/test_handlers/: conftest.py
tests/integration/test_repositories/: test_repository_channel.py  test_repository_chat.py  test_repository_user.py
tests/mocks/: updates.py
tests/mocks/aiogram_mocks/: mocked_bot.py  users.py
tests/parametrize/: channel.py  chat.py  user.py
tests/unit/: conftest.py  fix_test_stairway.py
tests/utils/: alembic.py
tests/utils/asserts/: channel.py  chat.py  user.py
(+90 files in other folders)
